--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,13 @@
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_nonsenseactivity">nonsenseactivity</string>
+    <string name="title_activity_post_login">PostLoginActivity</string>
+
+    <string name="hello_world">Hello world!</string>
+
+    <string name="hello_wellness">Hello wellness!</string>
+    <string name="hello_groups">Hello groups!</string>
+    <string name="hello_events">Hello events!</string>
 
 
 
