--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,5 +55,6 @@
     <string name="title_activity_group_details">GroupDetailsActivity</string>
     <string name="broadcast_message_saved_success">MessageSavedIntent</string>
     <string name="title_activity_invite_members">InviteMembersActivity</string>
+    <string name="title_activity_message_wall">MessageWallActivity</string>
 
 </resources>
