+First staple of PostMesasgeUIFragment (shows the Plus button and buttons that show up when you hit those plus gray background and edit text view)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,7 @@
     <string name="title_activity_invite_members">InviteMembersActivity</string>
     <string name="title_activity_message_wall">MessageWallActivity</string>
 
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
