+Added pager which pops up after registration!!! (https://github.com/thewisecity/declarehome-android/issues/9)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,5 +73,6 @@
     <string name="title_activity_user_details">UserDetailsActivity</string>
     <string name="title_activity_edit_user_details">EditUserDetailsActivity</string>
     <string name="title_activity_web">WebActivity</string>
+    <string name="title_activity_intro_slides">IntroSlidesActivity</string>
 
 </resources>
